<?xml version="1.0" encoding="utf-8"?>
<cn.ieclipse.af.view.refresh.EmptyView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="visible">

    <LinearLayout
        android:id="@id/ptr_empty_layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:minHeight="100dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/iv_loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateOnly="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/ptr_empty_tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/common_loading"
            android:textSize="@dimen/text_size_normal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/ptr_empty_layout_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:visibility="invisible">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@id/ptr_empty_iv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/common_ptr_error"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/ptr_empty_tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="@string/error_loading"
            android:textColor="@color/black_999999"
            android:textSize="@dimen/text_size_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            android:text="@string/error_loading_with_retry"
            android:textSize="@dimen/text_size_title"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/ptr_empty_layout_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:minHeight="100dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:visibility="invisible">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@id/ptr_empty_iv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/common_ptr_error"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/ptr_empty_tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/common_no_data"
            android:textColor="@color/black_999999"
            android:textSize="@dimen/text_size_normal"/>
    </LinearLayout>

</cn.ieclipse.af.view.refresh.EmptyView>