<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:divider="?android:listDivider"
    android:orientation="vertical"
    android:showDividers="middle">

    <RelativeLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="44dp"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:paddingTop="0dp">

        <TextView
            android:id="@+id/btn_cancel"
            style="@style/text_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:minHeight="30dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/common_cancel"
            android:layout_alignParentRight="true"/>
        <FrameLayout
            android:id="@+id/ll_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/btn_cancel">

            <EditText
                android:id="@+id/et_text"
                style="@style/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="24dp"
                android:background="@null"
                android:cursorVisible="true"
                android:gravity="center_vertical"
                android:hint=""
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:lines="1"
                android:minHeight="30dp"
                android:paddingBottom="0dp"
                android:paddingLeft="6dp"
                android:paddingTop="0dp"
                android:textColorHint="@color/fg_hint"
                tools:text="输入的文字"/>

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|right"
                android:src="@android:drawable/ic_delete"
                android:visibility="gone"
                tools:visibility="visible"
                />
        </FrameLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/listHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_label"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical|left"
                android:minHeight="35dp"
                android:text="@string/common_search_history_label"/>

            <TextView
                android:id="@+id/tv_clear"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:minHeight="35dp"
                android:text="@string/common_search_history_clear"
                android:textColor="#82bee7"/>
        </RelativeLayout>

        <cn.ieclipse.af.view.FlowLayout
            android:id="@+id/fl_hot_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:horizontalSpacing="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:verticalSpacing="10dp"
            android:visibility="gone"/>
    </LinearLayout>

    <include layout="@layout/base_list_content"/>
</LinearLayout>